// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderCardSVG > renders asynced24's card unchanged 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="358" height="498" viewBox="0 0 358 498" fill="none">
  <defs>
    <linearGradient id="gw-frame" x1="0" y1="0" x2="1" y2="1">
      <stop offset="0" stop-color="#9fb6c9"/>
      <stop offset="0.5" stop-color="#5f7a91"/>
      <stop offset="1" stop-color="#9fb6c9"/>
    </linearGradient>
    <linearGradient id="gw-theme" x1="0" y1="0" x2="1" y2="1">
      <stop offset="0" stop-color="#3178C6"/>
      <stop offset="1" stop-color="#58A6FF"/>
    </linearGradient>
    <linearGradient id="gw-fade" x1="0" y1="0" x2="0" y2="1">
      <stop offset="0" stop-color="#070914" stop-opacity="0"/>
      <stop offset="0.46" stop-color="#070914" stop-opacity="0"/>
      <stop offset="0.66" stop-color="#070914" stop-opacity="0.78"/>
      <stop offset="1" stop-color="#070914" stop-opacity="0.94"/>
    </linearGradient>
    <linearGradient id="gw-foil" x1="0" y1="0" x2="1" y2="0.6">
      <stop offset="0" stop-color="#ff5ea8"/>
      <stop offset="0.25" stop-color="#ffd35e"/>
      <stop offset="0.5" stop-color="#5effc1"/>
      <stop offset="0.75" stop-color="#5eb8ff"/>
      <stop offset="1" stop-color="#b45eff"/>
    </linearGradient>
    <radialGradient id="gw-energy" cx="35%" cy="35%">
      <stop offset="0" stop-color="white" stop-opacity="0.9"/>
      <stop offset="0.35" stop-color="#7dd3fc"/>
      <stop offset="1" stop-color="#7dd3fc" stop-opacity="0.75"/>
    </radialGradient>
    <filter id="gw-frost" x="-5%" y="-5%" width="110%" height="110%"><feGaussianBlur stdDeviation="7"/></filter>
    <filter id="gw-glow" x="-10%" y="-60%" width="120%" height="220%">
      <feGaussianBlur stdDeviation="3" result="b"/>
      <feMerge><feMergeNode in="b"/><feMergeNode in="b"/><feMergeNode in="SourceGraphic"/></feMerge>
    </filter>
    <clipPath id="gw-card"><rect width="350" height="490" rx="16"/></clipPath>
    <clipPath id="gw-avatar"><circle cx="98" cy="28" r="13"/></clipPath>
    <clipPath id="gw-panel0"><rect x="12" y="286" width="326" height="64" rx="10"/></clipPath><clipPath id="gw-panel1"><rect x="12" y="356" width="326" height="84" rx="10"/></clipPath><clipPath id="gw-panel2"><rect x="12" y="446" width="326" height="24" rx="8"/></clipPath>
  </defs>

  <!-- Frame: colour follows rarity -->
  <rect width="358" height="498" rx="20" fill="url(#gw-frame)"/>

  <g transform="translate(4,4)" clip-path="url(#gw-card)">
  <rect width="350" height="490" fill="#070914"/>
  <rect id="gw-art" width="350" height="490" fill="url(#gw-theme)"/>
  <rect width="350" height="490" fill="url(#gw-fade)"/>
  <rect width="350" height="282" fill="url(#gw-foil)" opacity="0.1" style="mix-blend-mode:screen"/>
  <path d="M239,197 Q240.76,203.24 247,205 Q240.76,206.76 239,213 Q237.24,206.76 231,205 Q237.24,203.24 239,197Z" fill="white" opacity="0.85"/><path d="M322,201 Q323.98,208.02 331,210 Q323.98,211.98 322,219 Q320.02,211.98 313,210 Q320.02,208.02 322,201Z" fill="white" opacity="0.85"/><path d="M239,88 Q240.54,93.46 246,95 Q240.54,96.54 239,102 Q237.46,96.54 232,95 Q237.46,93.46 239,88Z" fill="white" opacity="0.85"/>

  <!-- 52-week contribution horizon -->
  <polyline points="14.0,272.0 20.2,272.0 26.4,267.9 32.6,266.1 38.8,272.0 45.0,272.0 51.2,272.0 57.3,272.0 63.5,272.0 69.7,272.0 75.9,272.0 82.1,272.0 88.3,272.0 94.5,272.0 100.7,259.9 106.9,272.0 113.1,266.9 119.3,272.0 125.5,260.3 131.7,256.2 137.8,257.1 144.0,255.7 150.2,272.0 156.4,264.2 162.6,267.9 168.8,272.0 175.0,267.9 181.2,272.0 187.4,272.0 193.6,272.0 199.8,272.0 206.0,272.0 212.2,264.2 218.3,265.4 224.5,250.3 230.7,239.5 236.9,253.9 243.1,254.2 249.3,261.8 255.5,262.3 261.7,261.0 267.9,272.0 274.1,261.4 280.3,265.4 286.5,258.9 292.7,253.9 298.8,246.6 305.0,255.2 311.2,247.8 317.4,249.9 323.6,243.4 329.8,237.4 336.0,234.0" stroke="#7dd3fc" stroke-width="2" stroke-linejoin="round" stroke-linecap="round" filter="url(#gw-glow)"/>

  <!-- Header -->
  <rect x="8" y="8" width="334" height="40" rx="12" fill="rgba(8,10,20,0.78)" stroke="rgba(255,255,255,0.10)"/>
  <rect x="16" y="18" width="62" height="20" rx="10" fill="#e5e7eb"/>
  <text x="47" y="32" text-anchor="middle" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="9.5" letter-spacing="0.6" fill="#111827">STAGE 1</text>
  <circle cx="98" cy="28" r="14.5" fill="#9fb6c9"/>
  <circle cx="98" cy="28" r="13" fill="#3178C6"/><text x="98" y="33" text-anchor="middle" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="13" fill="white">A</text>
  <text x="120" y="34" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="15" fill="white">asynced24</text>
  <text x="330" y="37" text-anchor="end" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="25" fill="white">190</text>
  <text x="275" y="37" text-anchor="end" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="8.5" fill="rgba(255,255,255,0.7)">HP</text>

  <!-- Frosted glass panels -->
  <g clip-path="url(#gw-panel0)"><use href="#gw-art" filter="url(#gw-frost)"/></g>
  <rect x="12" y="286" width="326" height="64" rx="10" fill="rgba(10,12,24,0.66)" stroke="rgba(255,255,255,0.13)" stroke-width="1"/>
  <g clip-path="url(#gw-panel1)"><use href="#gw-art" filter="url(#gw-frost)"/></g>
  <rect x="12" y="356" width="326" height="84" rx="10" fill="rgba(10,12,24,0.66)" stroke="rgba(255,255,255,0.13)" stroke-width="1"/>
  <g clip-path="url(#gw-panel2)"><use href="#gw-art" filter="url(#gw-frost)"/></g>
  <rect x="12" y="446" width="326" height="24" rx="8" fill="rgba(10,12,24,0.66)" stroke="rgba(255,255,255,0.13)" stroke-width="1"/>

  <!-- Ability -->
  <text x="24" y="306" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8" letter-spacing="2" fill="#7dd3fc">ABILITY</text>
  <text x="76" y="307" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="14" fill="white">Polyglot</text>
  <text x="24" y="324" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8.5" font-style="italic" fill="rgba(255,255,255,0.88)">Writes 5 languages - attacks deal 10 extra damage</text>
  <text x="24" y="340" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8" fill="rgba(255,255,255,0.55)">1,152 contribs · 31/53 wks active</text>

  <!-- Attacks -->
  <circle cx="30" cy="375" r="6.5" fill="url(#gw-energy)"/><circle cx="46" cy="375" r="6.5" fill="url(#gw-energy)"/>
    <text x="60" y="380" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="14" fill="white">Type Strike</text>
    <text x="60" y="394" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8.5" fill="rgba(255,255,255,0.62)">1,152 contributions in the last year</text>
    <text x="326" y="388" text-anchor="end" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="24" fill="white">110</text>
  <line x1="24" y1="398" x2="326" y2="398" stroke="rgba(255,255,255,0.10)"/>
  <circle cx="30" cy="415" r="6.5" fill="url(#gw-energy)"/><circle cx="46" cy="415" r="6.5" fill="url(#gw-energy)"/>
    <text x="60" y="420" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="14" fill="white">Thunder Compile</text>
    <text x="60" y="434" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8.5" fill="rgba(255,255,255,0.62)">Powered by gitwrapped - ★ 1</text>
    <text x="326" y="428" text-anchor="end" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="24" fill="white">30</text>

  <!-- Weakness / resist / retreat -->
  <text x="26" y="461" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="7.5" letter-spacing="1.2" fill="rgba(255,255,255,0.5)">WEAKNESS</text>
  <circle cx="82" cy="458" r="3.4" fill="#9CA3AF"/>
  <text x="89" y="461.5" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="9" fill="white">×2</text>
  <line x1="120" y1="452" x2="120" y2="464" stroke="rgba(255,255,255,0.12)"/>
  <text x="134" y="461" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="7.5" letter-spacing="1.2" fill="rgba(255,255,255,0.5)">RESIST</text>
  <circle cx="174" cy="458" r="3.4" fill="#9CA3AF"/>
  <text x="181" y="461.5" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="9" fill="white">-30</text>
  <line x1="226" y1="452" x2="226" y2="464" stroke="rgba(255,255,255,0.12)"/>
  <text x="240" y="461" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="7.5" letter-spacing="1.2" fill="rgba(255,255,255,0.5)">RETREAT</text>
  <circle cx="292" cy="458" r="3.4" fill="#7dd3fc"/><circle cx="302" cy="458" r="3.4" fill="#7dd3fc"/><circle cx="312" cy="458" r="3.4" fill="#7dd3fc"/>

  <!-- Footer -->
  <text x="14" y="483" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="7.5" fill="rgba(255,255,255,0.5)">gitwrapped · Voltlynx · since 2022</text>
  <text x="336" y="483" text-anchor="end" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="7.5" letter-spacing="1.2" fill="#7dd3fc">◆ UNCOMMON</text>
  </g>
</svg>"
`;

exports[`renderCardSVG > renders gaearon's card unchanged 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="358" height="498" viewBox="0 0 358 498" fill="none">
  <defs>
    <linearGradient id="gw-frame" x1="0" y1="0" x2="1" y2="1">
      <stop offset="0" stop-color="#ffe27a"/>
      <stop offset="0.5" stop-color="#d99a00"/>
      <stop offset="1" stop-color="#ffe27a"/>
    </linearGradient>
    <linearGradient id="gw-theme" x1="0" y1="0" x2="1" y2="1">
      <stop offset="0" stop-color="#6B7280"/>
      <stop offset="1" stop-color="#9CA3AF"/>
    </linearGradient>
    <linearGradient id="gw-fade" x1="0" y1="0" x2="0" y2="1">
      <stop offset="0" stop-color="#070914" stop-opacity="0"/>
      <stop offset="0.46" stop-color="#070914" stop-opacity="0"/>
      <stop offset="0.66" stop-color="#070914" stop-opacity="0.78"/>
      <stop offset="1" stop-color="#070914" stop-opacity="0.94"/>
    </linearGradient>
    <linearGradient id="gw-foil" x1="0" y1="0" x2="1" y2="0.6">
      <stop offset="0" stop-color="#ff5ea8"/>
      <stop offset="0.25" stop-color="#ffd35e"/>
      <stop offset="0.5" stop-color="#5effc1"/>
      <stop offset="0.75" stop-color="#5eb8ff"/>
      <stop offset="1" stop-color="#b45eff"/>
    </linearGradient>
    <radialGradient id="gw-energy" cx="35%" cy="35%">
      <stop offset="0" stop-color="white" stop-opacity="0.9"/>
      <stop offset="0.35" stop-color="#fbbf24"/>
      <stop offset="1" stop-color="#fbbf24" stop-opacity="0.75"/>
    </radialGradient>
    <filter id="gw-frost" x="-5%" y="-5%" width="110%" height="110%"><feGaussianBlur stdDeviation="7"/></filter>
    <filter id="gw-glow" x="-10%" y="-60%" width="120%" height="220%">
      <feGaussianBlur stdDeviation="3" result="b"/>
      <feMerge><feMergeNode in="b"/><feMergeNode in="b"/><feMergeNode in="SourceGraphic"/></feMerge>
    </filter>
    <clipPath id="gw-card"><rect width="350" height="490" rx="16"/></clipPath>
    <clipPath id="gw-avatar"><circle cx="98" cy="28" r="13"/></clipPath>
    <clipPath id="gw-panel0"><rect x="12" y="286" width="326" height="64" rx="10"/></clipPath><clipPath id="gw-panel1"><rect x="12" y="356" width="326" height="84" rx="10"/></clipPath><clipPath id="gw-panel2"><rect x="12" y="446" width="326" height="24" rx="8"/></clipPath>
  </defs>

  <!-- Frame: colour follows rarity -->
  <rect width="358" height="498" rx="20" fill="url(#gw-frame)"/>

  <g transform="translate(4,4)" clip-path="url(#gw-card)">
  <rect width="350" height="490" fill="#070914"/>
  <rect id="gw-art" width="350" height="490" fill="url(#gw-theme)"/>
  <rect width="350" height="490" fill="url(#gw-fade)"/>
  <rect width="350" height="282" fill="url(#gw-foil)" opacity="0.28" style="mix-blend-mode:screen"/>
  <path d="M143,191 Q144.54,196.46 150,198 Q144.54,199.54 143,205 Q141.46,199.54 136,198 Q141.46,196.46 143,191Z" fill="white" opacity="0.85"/><path d="M72,94 Q73.98,101.02 81,103 Q73.98,104.98 72,112 Q70.02,104.98 63,103 Q70.02,101.02 72,94Z" fill="white" opacity="0.85"/><path d="M276,152 Q277.98,159.02 285,161 Q277.98,162.98 276,170 Q274.02,162.98 267,161 Q274.02,159.02 276,152Z" fill="white" opacity="0.85"/><path d="M182,87 Q183.54,92.46 189,94 Q183.54,95.54 182,101 Q180.46,95.54 175,94 Q180.46,92.46 182,87Z" fill="white" opacity="0.85"/><path d="M94,74 Q95.1,77.9 99,79 Q95.1,80.1 94,84 Q92.9,80.1 89,79 Q92.9,77.9 94,74Z" fill="white" opacity="0.85"/><path d="M152,164 Q152.88,167.12 156,168 Q152.88,168.88 152,172 Q151.12,168.88 148,168 Q151.12,167.12 152,164Z" fill="white" opacity="0.85"/><path d="M280,168 Q281.54,173.46 287,175 Q281.54,176.54 280,182 Q278.46,176.54 273,175 Q278.46,173.46 280,168Z" fill="white" opacity="0.85"/><path d="M170,86 Q171.98,93.02 179,95 Q171.98,96.98 170,104 Q168.02,96.98 161,95 Q168.02,93.02 170,86Z" fill="white" opacity="0.85"/>

  <!-- 52-week contribution horizon -->
  <polyline points="14.0,259.1 20.2,238.0 26.4,248.3 32.6,272.0 38.8,264.0 45.0,272.0 51.2,256.5 57.3,267.7 63.5,272.0 69.7,272.0 75.9,261.5 82.1,263.4 88.3,250.8 94.5,259.9 100.7,272.0 106.9,265.9 113.1,249.9 119.3,251.7 125.5,256.2 131.7,265.2 137.8,265.2 144.0,262.9 150.2,264.6 156.4,267.7 162.6,251.7 168.8,272.0 175.0,266.7 181.2,272.0 187.4,272.0 193.6,266.7 199.8,272.0 206.0,272.0 212.2,272.0 218.3,272.0 224.5,272.0 230.7,272.0 236.9,272.0 243.1,272.0 249.3,261.9 255.5,262.4 261.7,256.2 267.9,255.4 274.1,252.8 280.3,250.6 286.5,254.1 292.7,257.5 298.8,265.2 305.0,234.0 311.2,244.7 317.4,252.1 323.6,272.0 329.8,261.9 336.0,272.0" stroke="#fbbf24" stroke-width="2" stroke-linejoin="round" stroke-linecap="round" filter="url(#gw-glow)"/>

  <!-- Header -->
  <rect x="8" y="8" width="334" height="40" rx="12" fill="rgba(8,10,20,0.78)" stroke="rgba(255,255,255,0.10)"/>
  <rect x="16" y="18" width="62" height="20" rx="10" fill="#fbbf24"/>
  <text x="47" y="32" text-anchor="middle" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="9.5" letter-spacing="0.6" fill="#1a1405">STAGE 2</text>
  <circle cx="98" cy="28" r="14.5" fill="#ffe27a"/>
  <circle cx="98" cy="28" r="13" fill="#6B7280"/><text x="98" y="33" text-anchor="middle" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="13" fill="white">G</text>
  <text x="120" y="34" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="15" fill="white">gaearon</text>
  <text x="330" y="37" text-anchor="end" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="25" fill="white">270</text>
  <text x="275" y="37" text-anchor="end" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="8.5" fill="rgba(255,255,255,0.7)">HP</text>

  <!-- Frosted glass panels -->
  <g clip-path="url(#gw-panel0)"><use href="#gw-art" filter="url(#gw-frost)"/></g>
  <rect x="12" y="286" width="326" height="64" rx="10" fill="rgba(10,12,24,0.66)" stroke="rgba(255,255,255,0.13)" stroke-width="1"/>
  <g clip-path="url(#gw-panel1)"><use href="#gw-art" filter="url(#gw-frost)"/></g>
  <rect x="12" y="356" width="326" height="84" rx="10" fill="rgba(10,12,24,0.66)" stroke="rgba(255,255,255,0.13)" stroke-width="1"/>
  <g clip-path="url(#gw-panel2)"><use href="#gw-art" filter="url(#gw-frost)"/></g>
  <rect x="12" y="446" width="326" height="24" rx="8" fill="rgba(10,12,24,0.66)" stroke="rgba(255,255,255,0.13)" stroke-width="1"/>

  <!-- Ability -->
  <text x="24" y="306" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8" letter-spacing="2" fill="#fbbf24">ABILITY</text>
  <text x="76" y="307" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="14" fill="white">Star Collector</text>
  <text x="24" y="324" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8.5" font-style="italic" fill="rgba(255,255,255,0.88)">46k stars across own repos - immune to weakness</text>
  <text x="24" y="340" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8" fill="rgba(255,255,255,0.55)">1,055 contribs · 35/53 wks active</text>

  <!-- Attacks -->
  <circle cx="30" cy="375" r="6.5" fill="url(#gw-energy)"/><circle cx="46" cy="375" r="6.5" fill="url(#gw-energy)"/>
    <text x="60" y="380" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="14" fill="white">Code Strike</text>
    <text x="60" y="394" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8.5" fill="rgba(255,255,255,0.62)">1,055 contributions in the last year</text>
    <text x="326" y="388" text-anchor="end" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="24" fill="white">110</text>
  <line x1="24" y1="398" x2="326" y2="398" stroke="rgba(255,255,255,0.10)"/>
  <circle cx="30" cy="415" r="6.5" fill="url(#gw-energy)"/><circle cx="46" cy="415" r="6.5" fill="url(#gw-energy)"/><circle cx="62" cy="415" r="6.5" fill="url(#gw-energy)"/>
    <text x="76" y="420" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="14" fill="white">Stack Overflow</text>
    <text x="76" y="434" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8.5" fill="rgba(255,255,255,0.62)">Powered by react-hot-loader - ★ 12k</text>
    <text x="326" y="428" text-anchor="end" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="24" fill="white">190</text>

  <!-- Weakness / resist / retreat -->
  <text x="26" y="461" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="7.5" letter-spacing="1.2" fill="rgba(255,255,255,0.5)">WEAKNESS</text>
  <circle cx="82" cy="458" r="3.4" fill="#9CA3AF"/>
  <text x="89" y="461.5" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="9" fill="white">×2</text>
  <line x1="120" y1="452" x2="120" y2="464" stroke="rgba(255,255,255,0.12)"/>
  <text x="134" y="461" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="7.5" letter-spacing="1.2" fill="rgba(255,255,255,0.5)">RESIST</text>
  <circle cx="174" cy="458" r="3.4" fill="#9CA3AF"/>
  <text x="181" y="461.5" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="9" fill="white">-30</text>
  <line x1="226" y1="452" x2="226" y2="464" stroke="rgba(255,255,255,0.12)"/>
  <text x="240" y="461" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="7.5" letter-spacing="1.2" fill="rgba(255,255,255,0.5)">RETREAT</text>
  <circle cx="292" cy="458" r="3.4" fill="#fbbf24"/><circle cx="302" cy="458" r="3.4" fill="#fbbf24"/>

  <!-- Footer -->
  <text x="14" y="483" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="7.5" fill="rgba(255,255,255,0.5)">gitwrapped · Babel Seraph · since 2011</text>
  <text x="336" y="483" text-anchor="end" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="7.5" letter-spacing="1.2" fill="#fbbf24">◆ LEGENDARY</text>
  </g>
</svg>"
`;

exports[`renderCardSVG > renders shrikanthv15's card unchanged 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="358" height="498" viewBox="0 0 358 498" fill="none">
  <defs>
    <linearGradient id="gw-frame" x1="0" y1="0" x2="1" y2="1">
      <stop offset="0" stop-color="#d8c7ff"/>
      <stop offset="0.5" stop-color="#8b6fd6"/>
      <stop offset="1" stop-color="#d8c7ff"/>
    </linearGradient>
    <linearGradient id="gw-theme" x1="0" y1="0" x2="1" y2="1">
      <stop offset="0" stop-color="#E25822"/>
      <stop offset="1" stop-color="#FF6B35"/>
    </linearGradient>
    <linearGradient id="gw-fade" x1="0" y1="0" x2="0" y2="1">
      <stop offset="0" stop-color="#070914" stop-opacity="0"/>
      <stop offset="0.46" stop-color="#070914" stop-opacity="0"/>
      <stop offset="0.66" stop-color="#070914" stop-opacity="0.78"/>
      <stop offset="1" stop-color="#070914" stop-opacity="0.94"/>
    </linearGradient>
    <linearGradient id="gw-foil" x1="0" y1="0" x2="1" y2="0.6">
      <stop offset="0" stop-color="#ff5ea8"/>
      <stop offset="0.25" stop-color="#ffd35e"/>
      <stop offset="0.5" stop-color="#5effc1"/>
      <stop offset="0.75" stop-color="#5eb8ff"/>
      <stop offset="1" stop-color="#b45eff"/>
    </linearGradient>
    <radialGradient id="gw-energy" cx="35%" cy="35%">
      <stop offset="0" stop-color="white" stop-opacity="0.9"/>
      <stop offset="0.35" stop-color="#c4b5fd"/>
      <stop offset="1" stop-color="#c4b5fd" stop-opacity="0.75"/>
    </radialGradient>
    <filter id="gw-frost" x="-5%" y="-5%" width="110%" height="110%"><feGaussianBlur stdDeviation="7"/></filter>
    <filter id="gw-glow" x="-10%" y="-60%" width="120%" height="220%">
      <feGaussianBlur stdDeviation="3" result="b"/>
      <feMerge><feMergeNode in="b"/><feMergeNode in="b"/><feMergeNode in="SourceGraphic"/></feMerge>
    </filter>
    <clipPath id="gw-card"><rect width="350" height="490" rx="16"/></clipPath>
    <clipPath id="gw-avatar"><circle cx="98" cy="28" r="13"/></clipPath>
    <clipPath id="gw-panel0"><rect x="12" y="286" width="326" height="64" rx="10"/></clipPath><clipPath id="gw-panel1"><rect x="12" y="356" width="326" height="84" rx="10"/></clipPath><clipPath id="gw-panel2"><rect x="12" y="446" width="326" height="24" rx="8"/></clipPath>
  </defs>

  <!-- Frame: colour follows rarity -->
  <rect width="358" height="498" rx="20" fill="url(#gw-frame)"/>

  <g transform="translate(4,4)" clip-path="url(#gw-card)">
  <rect width="350" height="490" fill="#070914"/>
  <rect id="gw-art" width="350" height="490" fill="url(#gw-theme)"/>
  <rect width="350" height="490" fill="url(#gw-fade)"/>
  <rect width="350" height="282" fill="url(#gw-foil)" opacity="0.18" style="mix-blend-mode:screen"/>
  <path d="M50,138 Q51.98,145.02 59,147 Q51.98,148.98 50,156 Q48.02,148.98 41,147 Q48.02,145.02 50,138Z" fill="white" opacity="0.85"/><path d="M257,65 Q258.98,72.02 266,74 Q258.98,75.98 257,83 Q255.02,75.98 248,74 Q255.02,72.02 257,65Z" fill="white" opacity="0.85"/><path d="M297,165 Q297.88,168.12 301,169 Q297.88,169.88 297,173 Q296.12,169.88 293,169 Q296.12,168.12 297,165Z" fill="white" opacity="0.85"/><path d="M121,67 Q122.76,73.24 129,75 Q122.76,76.76 121,83 Q119.24,76.76 113,75 Q119.24,73.24 121,67Z" fill="white" opacity="0.85"/><path d="M286,169 Q287.98,176.02 295,178 Q287.98,179.98 286,187 Q284.02,179.98 277,178 Q284.02,176.02 286,169Z" fill="white" opacity="0.85"/>

  <!-- 52-week contribution horizon -->
  <polyline points="14.0,272.0 20.2,263.2 26.4,272.0 32.6,272.0 38.8,272.0 45.0,272.0 51.2,272.0 57.3,264.8 63.5,261.8 69.7,272.0 75.9,272.0 82.1,255.9 88.3,272.0 94.5,261.8 100.7,264.8 106.9,258.6 113.1,263.2 119.3,249.3 125.5,247.1 131.7,234.0 137.8,237.6 144.0,246.6 150.2,254.4 156.4,261.8 162.6,260.6 168.8,264.8 175.0,255.2 181.2,251.1 187.4,263.2 193.6,272.0 199.8,255.2 206.0,260.6 212.2,272.0 218.3,263.2 224.5,251.7 230.7,259.6 236.9,272.0 243.1,256.8 249.3,272.0 255.5,272.0 261.7,272.0 267.9,266.9 274.1,272.0 280.3,266.9 286.5,256.8 292.7,272.0 298.8,272.0 305.0,272.0 311.2,272.0 317.4,272.0 323.6,266.9 329.8,272.0 336.0,261.8" stroke="#c4b5fd" stroke-width="2" stroke-linejoin="round" stroke-linecap="round" filter="url(#gw-glow)"/>

  <!-- Header -->
  <rect x="8" y="8" width="334" height="40" rx="12" fill="rgba(8,10,20,0.78)" stroke="rgba(255,255,255,0.10)"/>
  <rect x="16" y="18" width="62" height="20" rx="10" fill="#fbbf24"/>
  <text x="47" y="32" text-anchor="middle" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="9.5" letter-spacing="0.6" fill="#1a1405">STAGE 2</text>
  <circle cx="98" cy="28" r="14.5" fill="#d8c7ff"/>
  <circle cx="98" cy="28" r="13" fill="#E25822"/><text x="98" y="33" text-anchor="middle" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="13" fill="white">S</text>
  <text x="120" y="34" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="15" fill="white">shrikanthv15</text>
  <text x="330" y="37" text-anchor="end" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="25" fill="white">230</text>
  <text x="275" y="37" text-anchor="end" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="8.5" fill="rgba(255,255,255,0.7)">HP</text>

  <!-- Frosted glass panels -->
  <g clip-path="url(#gw-panel0)"><use href="#gw-art" filter="url(#gw-frost)"/></g>
  <rect x="12" y="286" width="326" height="64" rx="10" fill="rgba(10,12,24,0.66)" stroke="rgba(255,255,255,0.13)" stroke-width="1"/>
  <g clip-path="url(#gw-panel1)"><use href="#gw-art" filter="url(#gw-frost)"/></g>
  <rect x="12" y="356" width="326" height="84" rx="10" fill="rgba(10,12,24,0.66)" stroke="rgba(255,255,255,0.13)" stroke-width="1"/>
  <g clip-path="url(#gw-panel2)"><use href="#gw-art" filter="url(#gw-frost)"/></g>
  <rect x="12" y="446" width="326" height="24" rx="8" fill="rgba(10,12,24,0.66)" stroke="rgba(255,255,255,0.13)" stroke-width="1"/>

  <!-- Ability -->
  <text x="24" y="306" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8" letter-spacing="2" fill="#c4b5fd">ABILITY</text>
  <text x="76" y="307" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="14" fill="white">Iron Routine</text>
  <text x="24" y="324" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8.5" font-style="italic" fill="rgba(255,255,255,0.88)">Active 31 of the last 53 weeks - immune to status effects</text>
  <text x="24" y="340" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8" fill="rgba(255,255,255,0.55)">326 contribs · 31/53 wks active</text>

  <!-- Attacks -->
  <circle cx="30" cy="375" r="6.5" fill="url(#gw-energy)"/><circle cx="46" cy="375" r="6.5" fill="url(#gw-energy)"/>
    <text x="60" y="380" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="14" fill="white">Flame Script</text>
    <text x="60" y="394" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8.5" fill="rgba(255,255,255,0.62)">326 contributions in the last year</text>
    <text x="326" y="388" text-anchor="end" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="24" fill="white">90</text>
  <line x1="24" y1="398" x2="326" y2="398" stroke="rgba(255,255,255,0.10)"/>
  <circle cx="30" cy="415" r="6.5" fill="url(#gw-energy)"/><circle cx="46" cy="415" r="6.5" fill="url(#gw-energy)"/>
    <text x="60" y="420" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="14" fill="white">Inferno Deploy</text>
    <text x="60" y="434" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8.5" fill="rgba(255,255,255,0.62)">Powered by MAD1-Project - ★ 1</text>
    <text x="326" y="428" text-anchor="end" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="24" fill="white">30</text>

  <!-- Weakness / resist / retreat -->
  <text x="26" y="461" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="7.5" letter-spacing="1.2" fill="rgba(255,255,255,0.5)">WEAKNESS</text>
  <circle cx="82" cy="458" r="3.4" fill="#9CA3AF"/>
  <text x="89" y="461.5" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="9" fill="white">×2</text>
  <line x1="120" y1="452" x2="120" y2="464" stroke="rgba(255,255,255,0.12)"/>
  <text x="134" y="461" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="7.5" letter-spacing="1.2" fill="rgba(255,255,255,0.5)">RESIST</text>
  <circle cx="174" cy="458" r="3.4" fill="#9CA3AF"/>
  <text x="181" y="461.5" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="9" fill="white">-30</text>
  <line x1="226" y1="452" x2="226" y2="464" stroke="rgba(255,255,255,0.12)"/>
  <text x="240" y="461" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="7.5" letter-spacing="1.2" fill="rgba(255,255,255,0.5)">RETREAT</text>
  <circle cx="292" cy="458" r="3.4" fill="#c4b5fd"/><circle cx="302" cy="458" r="3.4" fill="#c4b5fd"/>

  <!-- Footer -->
  <text x="14" y="483" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="7.5" fill="rgba(255,255,255,0.5)">gitwrapped · Cable Basilisk · since 2018</text>
  <text x="336" y="483" text-anchor="end" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="7.5" letter-spacing="1.2" fill="#c4b5fd">◆ RARE</text>
  </g>
</svg>"
`;

exports[`renderCardSVG > renders torvalds's card unchanged 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="358" height="498" viewBox="0 0 358 498" fill="none">
  <defs>
    <linearGradient id="gw-frame" x1="0" y1="0" x2="1" y2="1">
      <stop offset="0" stop-color="#ffe27a"/>
      <stop offset="0.5" stop-color="#d99a00"/>
      <stop offset="1" stop-color="#ffe27a"/>
    </linearGradient>
    <linearGradient id="gw-theme" x1="0" y1="0" x2="1" y2="1">
      <stop offset="0" stop-color="#555555"/>
      <stop offset="1" stop-color="#777777"/>
    </linearGradient>
    <linearGradient id="gw-fade" x1="0" y1="0" x2="0" y2="1">
      <stop offset="0" stop-color="#070914" stop-opacity="0"/>
      <stop offset="0.46" stop-color="#070914" stop-opacity="0"/>
      <stop offset="0.66" stop-color="#070914" stop-opacity="0.78"/>
      <stop offset="1" stop-color="#070914" stop-opacity="0.94"/>
    </linearGradient>
    <linearGradient id="gw-foil" x1="0" y1="0" x2="1" y2="0.6">
      <stop offset="0" stop-color="#ff5ea8"/>
      <stop offset="0.25" stop-color="#ffd35e"/>
      <stop offset="0.5" stop-color="#5effc1"/>
      <stop offset="0.75" stop-color="#5eb8ff"/>
      <stop offset="1" stop-color="#b45eff"/>
    </linearGradient>
    <radialGradient id="gw-energy" cx="35%" cy="35%">
      <stop offset="0" stop-color="white" stop-opacity="0.9"/>
      <stop offset="0.35" stop-color="#fbbf24"/>
      <stop offset="1" stop-color="#fbbf24" stop-opacity="0.75"/>
    </radialGradient>
    <filter id="gw-frost" x="-5%" y="-5%" width="110%" height="110%"><feGaussianBlur stdDeviation="7"/></filter>
    <filter id="gw-glow" x="-10%" y="-60%" width="120%" height="220%">
      <feGaussianBlur stdDeviation="3" result="b"/>
      <feMerge><feMergeNode in="b"/><feMergeNode in="b"/><feMergeNode in="SourceGraphic"/></feMerge>
    </filter>
    <clipPath id="gw-card"><rect width="350" height="490" rx="16"/></clipPath>
    <clipPath id="gw-avatar"><circle cx="98" cy="28" r="13"/></clipPath>
    <clipPath id="gw-panel0"><rect x="12" y="286" width="326" height="64" rx="10"/></clipPath><clipPath id="gw-panel1"><rect x="12" y="356" width="326" height="84" rx="10"/></clipPath><clipPath id="gw-panel2"><rect x="12" y="446" width="326" height="24" rx="8"/></clipPath>
  </defs>

  <!-- Frame: colour follows rarity -->
  <rect width="358" height="498" rx="20" fill="url(#gw-frame)"/>

  <g transform="translate(4,4)" clip-path="url(#gw-card)">
  <rect width="350" height="490" fill="#070914"/>
  <rect id="gw-art" width="350" height="490" fill="url(#gw-theme)"/>
  <rect width="350" height="490" fill="url(#gw-fade)"/>
  <rect width="350" height="282" fill="url(#gw-foil)" opacity="0.28" style="mix-blend-mode:screen"/>
  <path d="M153,188 Q154.76,194.24 161,196 Q154.76,197.76 153,204 Q151.24,197.76 145,196 Q151.24,194.24 153,188Z" fill="white" opacity="0.85"/><path d="M211,154 Q212.1,157.9 216,159 Q212.1,160.1 211,164 Q209.9,160.1 206,159 Q209.9,157.9 211,154Z" fill="white" opacity="0.85"/><path d="M87,70 Q88.98,77.02 96,79 Q88.98,80.98 87,88 Q85.02,80.98 78,79 Q85.02,77.02 87,70Z" fill="white" opacity="0.85"/><path d="M89,92 Q90.98,99.02 98,101 Q90.98,102.98 89,110 Q87.02,102.98 80,101 Q87.02,99.02 89,92Z" fill="white" opacity="0.85"/><path d="M42,202 Q43.1,205.9 47,207 Q43.1,208.1 42,212 Q40.9,208.1 37,207 Q40.9,205.9 42,202Z" fill="white" opacity="0.85"/><path d="M310,130 Q311.32,134.68 316,136 Q311.32,137.32 310,142 Q308.68,137.32 304,136 Q308.68,134.68 310,130Z" fill="white" opacity="0.85"/><path d="M238,58 Q239.32,62.68 244,64 Q239.32,65.32 238,70 Q236.68,65.32 232,64 Q236.68,62.68 238,58Z" fill="white" opacity="0.85"/><path d="M63,75 Q64.98,82.02 72,84 Q64.98,85.98 63,93 Q61.02,85.98 54,84 Q61.02,82.02 63,75Z" fill="white" opacity="0.85"/>

  <!-- 52-week contribution horizon -->
  <polyline points="14.0,253.9 20.2,235.6 26.4,248.8 32.6,255.4 38.8,256.1 45.0,255.6 51.2,256.3 57.3,254.8 63.5,255.6 69.7,254.8 75.9,234.9 82.1,252.6 88.3,255.0 94.5,256.5 100.7,253.7 106.9,252.4 113.1,251.5 119.3,246.4 125.5,256.5 131.7,255.6 137.8,237.4 144.0,248.5 150.2,255.0 156.4,252.0 162.6,256.1 168.8,253.9 175.0,253.0 181.2,254.3 187.4,255.2 193.6,236.5 199.8,247.6 206.0,256.8 212.2,253.5 218.3,253.1 224.5,250.6 230.7,252.8 236.9,249.0 243.1,250.5 249.3,238.1 255.5,246.4 261.7,259.1 267.9,257.2 274.1,254.5 280.3,251.8 286.5,238.1 292.7,234.0 298.8,244.7 305.0,236.4 311.2,249.1 317.4,245.7 323.6,251.5 329.8,245.6 336.0,257.7" stroke="#fbbf24" stroke-width="2" stroke-linejoin="round" stroke-linecap="round" filter="url(#gw-glow)"/>

  <!-- Header -->
  <rect x="8" y="8" width="334" height="40" rx="12" fill="rgba(8,10,20,0.78)" stroke="rgba(255,255,255,0.10)"/>
  <rect x="16" y="18" width="62" height="20" rx="10" fill="#fbbf24"/>
  <text x="47" y="32" text-anchor="middle" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="9.5" letter-spacing="0.6" fill="#1a1405">STAGE 2</text>
  <circle cx="98" cy="28" r="14.5" fill="#ffe27a"/>
  <circle cx="98" cy="28" r="13" fill="#555555"/><text x="98" y="33" text-anchor="middle" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="13" fill="white">T</text>
  <text x="120" y="34" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="15" fill="white">torvalds</text>
  <text x="330" y="37" text-anchor="end" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="25" fill="white">340</text>
  <text x="275" y="37" text-anchor="end" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="8.5" fill="rgba(255,255,255,0.7)">HP</text>

  <!-- Frosted glass panels -->
  <g clip-path="url(#gw-panel0)"><use href="#gw-art" filter="url(#gw-frost)"/></g>
  <rect x="12" y="286" width="326" height="64" rx="10" fill="rgba(10,12,24,0.66)" stroke="rgba(255,255,255,0.13)" stroke-width="1"/>
  <g clip-path="url(#gw-panel1)"><use href="#gw-art" filter="url(#gw-frost)"/></g>
  <rect x="12" y="356" width="326" height="84" rx="10" fill="rgba(10,12,24,0.66)" stroke="rgba(255,255,255,0.13)" stroke-width="1"/>
  <g clip-path="url(#gw-panel2)"><use href="#gw-art" filter="url(#gw-frost)"/></g>
  <rect x="12" y="446" width="326" height="24" rx="8" fill="rgba(10,12,24,0.66)" stroke="rgba(255,255,255,0.13)" stroke-width="1"/>

  <!-- Ability -->
  <text x="24" y="306" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8" letter-spacing="2" fill="#fbbf24">ABILITY</text>
  <text x="76" y="307" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="14" fill="white">Star Collector</text>
  <text x="24" y="324" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8.5" font-style="italic" fill="rgba(255,255,255,0.88)">262k stars across own repos - immune to weakness</text>
  <text x="24" y="340" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8" fill="rgba(255,255,255,0.55)">3,763 contribs · 53/53 wks active</text>

  <!-- Attacks -->
  <circle cx="30" cy="375" r="6.5" fill="url(#gw-energy)"/><circle cx="46" cy="375" r="6.5" fill="url(#gw-energy)"/>
    <text x="60" y="380" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="14" fill="white">Memory Alloc</text>
    <text x="60" y="394" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8.5" fill="rgba(255,255,255,0.62)">3,763 contributions in the last year</text>
    <text x="326" y="388" text-anchor="end" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="24" fill="white">120</text>
  <line x1="24" y1="398" x2="326" y2="398" stroke="rgba(255,255,255,0.10)"/>
  <circle cx="30" cy="415" r="6.5" fill="url(#gw-energy)"/><circle cx="46" cy="415" r="6.5" fill="url(#gw-energy)"/><circle cx="62" cy="415" r="6.5" fill="url(#gw-energy)"/>
    <text x="76" y="420" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="14" fill="white">System Call</text>
    <text x="76" y="434" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8.5" fill="rgba(255,255,255,0.62)">Powered by linux - ★ 250k</text>
    <text x="326" y="428" text-anchor="end" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', 'Helvetica Neue', sans-serif" font-size="24" fill="white">200</text>

  <!-- Weakness / resist / retreat -->
  <text x="26" y="461" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="7.5" letter-spacing="1.2" fill="rgba(255,255,255,0.5)">WEAKNESS</text>
  <circle cx="82" cy="458" r="3.4" fill="#9CA3AF"/>
  <text x="89" y="461.5" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="9" fill="white">×2</text>
  <line x1="120" y1="452" x2="120" y2="464" stroke="rgba(255,255,255,0.12)"/>
  <text x="134" y="461" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="7.5" letter-spacing="1.2" fill="rgba(255,255,255,0.5)">RESIST</text>
  <circle cx="174" cy="458" r="3.4" fill="#9CA3AF"/>
  <text x="181" y="461.5" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="9" fill="white">-30</text>
  <line x1="226" y1="452" x2="226" y2="464" stroke="rgba(255,255,255,0.12)"/>
  <text x="240" y="461" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="7.5" letter-spacing="1.2" fill="rgba(255,255,255,0.5)">RETREAT</text>
  <circle cx="292" cy="458" r="3.4" fill="#fbbf24"/><circle cx="302" cy="458" r="3.4" fill="#fbbf24"/><circle cx="312" cy="458" r="3.4" fill="#fbbf24"/>

  <!-- Footer -->
  <text x="14" y="483" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="7.5" fill="rgba(255,255,255,0.5)">gitwrapped · Bedrock Leviathan · since 2011</text>
  <text x="336" y="483" text-anchor="end" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="7.5" letter-spacing="1.2" fill="#fbbf24">◆ LEGENDARY</text>
  </g>
</svg>"
`;
